fix controls overflow

--- a/css/subject_viewer.styl
+++ b/css/subject_viewer.styl
@@ -142,6 +142,7 @@
     color: darken($brown, 67%);
     font-size: 14px;
     margin: 15px 0 4px;
+    overflow: auto;
     position: relative;
     text-shadow: 0 1px 0 rgba($white, 0.25);
   }
